<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ToolbarStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_above="@+id/imageView"
        android:layout_below="@+id/toolbar"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutMsgTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/etMsgTitle"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_msg_title"
                    android:inputType="textCapSentences|textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLayoutMsgDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputLayoutMsgTitle"
                android:layout_marginTop="5dp"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/etMsgDesc"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_msg_desc"
                    android:inputType="textCapSentences|textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputLayoutMsgDesc"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/hint_send" />

        </RelativeLayout>
    </ScrollView>

    <ImageView
    android:visibility="gone"
    android:id="@+id/imageView"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="100dp" />

</RelativeLayout>
